--- a/project/TribalTreasures/src/main/resources/application.properties
+++ b/project/TribalTreasures/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.port=1981
 
 #spring datasource properties
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/tribaltreasures
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://root:tcHbciVyfXoVtsmUnHzTCXZpExqpqSQw@junction.proxy.rlwy.net:13798/railway
 spring.datasource.username=root
-spring.datasource.password=Sai@2004
+spring.datasource.password=tcHbciVyfXoVtsmUnHzTCXZpExqpqSQw
 
 #spring hibernate jpa properties
 
